<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:iconTint="@color/button"/>

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/plan"
        android:title="@string/title_plan"
        android:iconTint="@color/button"/>

    <item
        android:id="@+id/noteListingFragment"
        android:icon="@drawable/note"
        android:title="@string/title_profile"
        android:iconTint="@color/button"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"
        android:iconTint="@color/button"/>

</menu>
