<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:text="@string/restore_pass"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="E-mail"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="25dp"
        android:textColor="#677AA1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_pass_btn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button"
        android:layout_marginBottom="344dp"
        android:text="@string/send_email"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:textAppearance="@style/SubTitleStyle"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ProgressBar
        android:id="@+id/forgot_pass_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="10dp"
        android:indeterminateTint="@color/main"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/forgot_pass_btn"
        app:layout_constraintEnd_toEndOf="@+id/forgot_pass_btn"
        app:layout_constraintStart_toStartOf="@+id/forgot_pass_btn"
        app:layout_constraintTop_toTopOf="@+id/forgot_pass_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>