<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/sign_up"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/button"
        android:text="@string/sign_up_button"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:textAppearance="@style/SubTitleStyle"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <ProgressBar
        android:id="@+id/sign_up_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/main"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
        app:layout_constraintTop_toTopOf="@+id/sign_up_button" />



    <!--        <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="163dp"-->
    <!--        android:layout_marginBottom="668dp"-->
    <!--        android:text="@string/sign_up_text"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/imageView"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/imageView" />-->

    <!--    хуйня-->

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Никнейм"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="25dp"
        android:textColor="#677AA1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="E-mail"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="25dp"
        android:textColor="#677AA1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="E-mail"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="25dp"
        android:textColor="#677AA1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <!--        android:onClick="onClickSignIn"-->


<!--    <TextView-->
<!--        android:id="@+id/politics"-->
<!--        android:layout_width="230dp"-->
<!--        android:layout_height="36dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:layout_marginBottom="332dp"-->
<!--        android:fontFamily="@font/avenirnextcyr_medium"-->
<!--        android:minHeight="48dp"-->
<!--        android:text="@string/politics"-->
<!--        android:textColor="#677AA1"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.251"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkBox"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="482dp"-->
<!--        android:layout_marginBottom="332dp"-->
<!--        android:width="20dp"-->
<!--        android:height="20dp"-->
<!--        android:button="@drawable/custom_checkbox"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.7"-->
<!--        app:layout_constraintStart_toEndOf="@+id/politics"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imageView" />-->

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="179dp"
        android:fontFamily="@font/avenirnextcyr_medium"
        android:minHeight="48dp"
        android:onClick="onClickSignIn"
        android:text="@string/sign_in"
        android:textColor="#2F5198"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>